chore: refactor the code according to the copilot suggestions